k8s/spark/spark-history-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  namespace: spark-history
  labels:
    app.kubernetes.io/name: spark-history-server
    name: spark-history-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spark-history-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark-history-server
  spec:
    containers:
      - name: spark-history-server
        image: apache/spark:4.1.0
        command:
          - /opt/spark/bin/spark-class
        args:
          - org.apache.spark.deploy.history.HistoryServer
        ports:
          - name: http
            containerPort: 18080
            protocol: TCP
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 18080
          initialDelaySeconds: 30
          periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 18080
        #   initialDelaySeconds: 15
        #   periodSeconds: 10
        volumeMounts:
          - name: extra-jars
            mountPath: /opt/spark/extra-jars
          - name: spark-config
            mountPath: /opt/spark/conf/spark-defaults.conf
            subPath: spark-defaults.conf
    volumes:
      - name: extra-jars
        emptyDir: {}
      - name: spark-config
        configMap:
          name: spark-history-config
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: spark-history
spec:
  type: ClusterIP
  ports:
    - port: 18080
      targetPort: 18080
      name: http
  selector:
    app.kubernetes.io/name: spark-history-server
